# stdio-proxy

./: LICENSE  README.md  pyproject.toml
src/stdio_proxy/: stdio_proxy.py
