[project]
name = "stdio_proxy"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Yuhua Wu", email = "yuhua.wu.sv@gmail.com" },
]
keywords = ["stdio", "proxy", "inspect"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: draft",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "tzdata>=2024.2",
    "tzlocal>=5.3.1"
]

[project.scripts]
stdio_proxy = "stdio_proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "freezegun>=1.5.1",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]
